[gd_scene load_steps=8 format=3 uid="uid://dey8il6ro51hd"]

[ext_resource type="Script" path="res://scripts/pets/pet_walk.gd" id="1_umsjc"]
[ext_resource type="SpriteFrames" uid="uid://bbl5mot0w2jtg" path="res://assets/Creatures/PetFrames.tres" id="2_202dn"]
[ext_resource type="SpriteFrames" uid="uid://cude6kyut2hx4" path="res://assets/items/food/EatingFoodSprites.tres" id="3_m4exn"]

[sub_resource type="Animation" id="Animation_uqjx1"]
resource_name = "Float"
length = 2.0
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.505, 0, 0.4, 1, 0, 0.48, 0, 0.8, 1, 0, 0.505, 0, 1.2, 1, 0, 0.48, 0, 1.6, 1, 0, 0.505, 0, 2, 1, 0, 0.48, 0)

[sub_resource type="Animation" id="Animation_do4nc"]
resource_name = "Ground_Idle"
length = 4.0
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.505, 0, 1, 1, 0, 0.495, 0, 2, 1, 0, 0.505, 0, 3, 1, 0, 0.495, 0, 4, 1, 0, 0.505, 0)
tracks/1/type = "scale_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteHolder")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 1, 1.01, 1, 1, 1, 1, 0.99, 1, 2, 1, 1, 1.01, 1, 3, 1, 1, 0.99, 1, 4, 1, 1, 1.01, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_433f5"]
_data = {
"Float": SubResource("Animation_uqjx1"),
"Ground_Idle": SubResource("Animation_do4nc")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_xx636"]

[node name="Pet" type="CharacterBody3D"]
script = ExtResource("1_umsjc")

[node name="Sprite_Base" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera_Target" type="Node3D" parent="Sprite_Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 4.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite_Base"]
libraries = {
"": SubResource("AnimationLibrary_433f5")
}

[node name="SpriteHolder" type="Node3D" parent="Sprite_Base"]
transform = Transform3D(1, 0, 0, 0, 1.01, 0, 0, 0, 1, 0, 0.505, 0)

[node name="PetSprite" type="AnimatedSprite3D" parent="Sprite_Base/SpriteHolder"]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)
flip_h = true
sprite_frames = ExtResource("2_202dn")
animation = &"sheep_eat"

[node name="FoodSprite" type="AnimatedSprite3D" parent="Sprite_Base/SpriteHolder"]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0.0787662, -0.124156, 0.00203705)
sorting_offset = 0.5
sprite_frames = ExtResource("3_m4exn")
animation = &"meat"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.25, 0)
shape = SubResource("BoxShape3D_xx636")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
